--- a/templates/index_paid.html
+++ b/templates/index_paid.html
@@ -19,7 +19,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="けんけんスロット分析ツール">
   <meta name="twitter:description" content="けんけんスロット分析ツール">
-  <meta name="twitter:image" content="{{ og_image }}">
+  <meta name="twitter:image" content="{{ tw_image }}">  <!-- ★ ここだけ別URL -->
 
   <title>けんけんスロット分析ツール</title>
 
