--- a/templates/index_paid.html
+++ b/templates/index_paid.html
@@ -219,7 +219,7 @@
   </style>
 </head>
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HXM85ZV043"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
