--- a/templates/index_paid.html
+++ b/templates/index_paid.html
@@ -516,7 +516,7 @@
     // 機種ごとのロック
     function updateFieldLocking(machineName) {
       const lockTargets = lockedFieldMap[machineName] || [];
-      const allTargets = ["through","at_gap","custom_condition"];
+      const allTargets = ["through","at_gap","prev_diff","prev_game","prev_coin","prev_type","custom_condition"];
 
       allTargets.forEach(id => {
         const el = document.getElementById(id);
